--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,9 @@
 * {
   box-sizing: border-box;
 }
+.list::-webkit-scrollbar {
+  display: none;
+}
 
 body {
   /* background-color: #f7f7f7; */
@@ -22,7 +25,18 @@ body {
 
 .container {
   margin: 30px auto;
-  width: 350px;
+  width: 80vw;
+  display: flex;
+  justify-content: space-around;
+  height: 80vh;
+}
+
+.balance__container {
+  display: flex;
+  flex-direction: column;
+  /* background-color: #00ba74; */
+  border-radius: 5px;
+  padding: 10px;
 }
 
 h1 {
@@ -102,15 +116,17 @@ input[type="number"] {
   border-radius: 1rem;
 }
 
-.btn:focus,
-.delete-btn:focus {
-  outline: 0;
+.history__list {
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
 }
 
 .list {
   list-style-type: none;
   padding: 0;
   margin-bottom: 40px;
+  overflow-y: auto;
 }
 
 .list li {
@@ -120,8 +136,17 @@ input[type="number"] {
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding: 10px;
+  padding: 12px 10px 12px 8px;
   margin: 10px 0;
+}
+li .li__text {
+  padding: 0 5px 0 5px;
+  width: 15.5vw;
+  text-align: left;
+}
+
+li span {
+  width: 3vw;
 }
 
 .list li.plus {
@@ -132,22 +157,27 @@ input[type="number"] {
   border-right: 5px solid #c0392b;
 }
 
-.delete-btn {
-  cursor: pointer;
-  background-color: #e74c3c;
-  border: 0;
-  color: #fff;
-  font-size: 20px;
-  line-height: 20px;
-  padding: 2px 5px;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translate(-100%, -50%);
-  opacity: 0;
-  transition: opacity 0.3s ease;
+.transaction__list-item {
+  display: flex;
 }
 
-.list li:hover .delete-btn {
-  opacity: 1;
+.delete-btn {
+  /* width: 30px; */
+  cursor: pointer;
+  width: 1rem;
+  border: 0;
+  background: none;
+  color: #000;
+  font-size: 0.7rem;
+  opacity: 100;
+  text-align: center;
+  padding: 0;
+  /* position: absolute; */
+  /* transform: translate(-100%, -50%); */
+}
+
+.btn:focus,
+.delete-btn:focus {
+  outline: none;
+  color: #0047ba;
 }
