--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,15 +28,14 @@ body {
   width: 80vw;
   display: flex;
   justify-content: space-around;
-  height: 80vh;
 }
 
 .balance__container {
+  height: 90%;
   display: flex;
   flex-direction: column;
-  /* background-color: #00ba74; */
-  border-radius: 5px;
-  padding: 10px;
+  border-radius: 1rem;
+  padding: 25px 25px 5px 25px;
 }
 
 h1 {
@@ -53,6 +52,9 @@ h3 {
 h4 {
   margin: 0;
   text-transform: uppercase;
+}
+h2 {
+  text-align: center;
 }
 
 .inc-exp-container {
@@ -119,7 +121,7 @@ input[type="number"] {
 .history__list {
   display: flex;
   flex-direction: column;
-  width: 20vw;
+  /* min-width: 20vw; */
 }
 
 .list {
@@ -131,22 +133,20 @@ input[type="number"] {
 
 .list li {
   background-color: #fff;
+  width: 30vw;
+
+  display: flex;
+  gap: 0;
   box-shadow: var(--box-shadow);
   color: #333;
-  display: flex;
-  justify-content: space-between;
   position: relative;
   padding: 12px 10px 12px 8px;
   margin: 10px 0;
 }
-li .li__text {
-  padding: 0 5px 0 5px;
-  width: 15.5vw;
-  text-align: left;
-}
 
 li span {
-  width: 3vw;
+  position: absolute;
+  right: 5px;
 }
 
 .list li.plus {
@@ -164,20 +164,59 @@ li span {
 .delete-btn {
   /* width: 30px; */
   cursor: pointer;
-  width: 1rem;
+  width: 1.2rem;
   border: 0;
   background: none;
-  color: #000;
-  font-size: 0.7rem;
-  opacity: 100;
+  color: #1e3050;
   text-align: center;
-  padding: 0;
+  padding: 2.5px 0 0;
   /* position: absolute; */
   /* transform: translate(-100%, -50%); */
 }
+.delete-btn:hover {
+  color: #49689c;
+}
 
-.btn:focus,
-.delete-btn:focus {
+.delete-btn:active {
   outline: none;
-  color: #0047ba;
+  color: #74a0ac;
+}
+
+@media screen and (max-width: 950px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    /* height: 200vh; */
+  }
+
+  .balance__container {
+    /* background-color: #00ba74; */
+  }
+
+  .list li {
+    width: 350px;
+  }
+}
+@media screen and (min-width: 950px) {
+  .container {
+    height: 90vh;
+  }
+
+  .list li {
+    min-width: 350px;
+  }
+
+  .balance__container {
+    background-color: #00ba74;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .balance__container {
+    background-color: transparent;
+  }
+
+  .list li {
+    width: 300px;
+  }
 }
