--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,8 @@
 }
 
 body {
-  background: url("./images/background1.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(./images/background1.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -54,14 +55,23 @@ h3 {
   padding-bottom: 10px;
   margin: 40px 0 10px;
 }
+.h3_history {
+  color: #dac0a3;
+}
 
 h4 {
   margin: 0;
   text-transform: uppercase;
 }
+.holder {
+  ::-webkit-input-placeholder {
+    font-size: 0.9rem !important;
+  }
+}
 .title_main {
   text-align: center;
   margin-top: 2rem;
+  color: #ffffe8;
 }
 
 .inc-exp-container {
@@ -128,6 +138,7 @@ input[type="number"] {
 .history__list {
   display: flex;
   flex-direction: column;
+
   /* min-width: 20vw; */
 }
 
@@ -153,7 +164,15 @@ input[type="number"] {
 .li__text {
   margin: 0 0 0 5px;
 }
-
+.input_text {
+  font-weight: 400;
+  font-size: 1.1rem;
+}
+.input_amount {
+  font-weight: 400;
+  font-size: 0.9rem;
+  margin: 1.2rem 0 0.5rem 0;
+}
 li span {
   position: absolute;
   right: 5px;
@@ -213,7 +232,7 @@ li span {
   }
 
   .balance__container {
-    background-color: rgba(79, 181, 177, 0.4);
+    background-color: rgba(78, 209, 205, 0.384);
     box-shadow: var(--box-shadow);
   }
 }
